--- a/src/data/src/AXOpen.Data.Blazor/_Imports.razor
+++ b/src/data/src/AXOpen.Data.Blazor/_Imports.razor
@@ -2,3 +2,4 @@
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using CommunityToolkit.Mvvm.ComponentModel;
 @using AXOpen.Data;
+@using AXOpen.Base.Dialogs;
