--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
-@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;
+@*@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;*@
 @using axopen_integrations_blazor.Data
 @inject IAlertDialogService DialogService
 @inject WeatherForecastService ForecastService
