--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using AXSharp.Abstractions.Dialogs.AlertDialog;
-@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;
-@inject IAlertDialogService DialogService
+@*@using AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog;*@
+@*@inject IAlertDialogService DialogService*@
 
 <PageTitle>Index</PageTitle>
 
@@ -15,6 +15,6 @@ Welcome to your new app.
 @code {
     public void CreateToast()
     {
-        DialogService.AddAlertDialog("Success", "Test", "test", 30);
+        //DialogService.AddAlertDialog("Success", "Test", "test", 30);
     }
 }
