--- a/src/templates.simple/axosimple.app/Shared/MainLayout.razor
+++ b/src/templates.simple/axosimple.app/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
     </main>
     <NavMenu />
 
-    <AXSharp.Presentation.Blazor.Controls.Dialogs.AlertDialog.Toaster />
+   <AXOpen.Core.Blazor.Dialogs.AlertDialog.Toaster></AXOpen.Core.Blazor.Dialogs.AlertDialog.Toaster>
 
     @*<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" />*@
 
