--- a/src/core/src/AXOpen.Core.Blazor/_Imports.razor
+++ b/src/core/src/AXOpen.Core.Blazor/_Imports.razor
@@ -1,3 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using BlazorBootstrap;
+@using Microsoft.AspNetCore.Components.Authorization
