--- a/src/templates.simple/axosimple.app/Shared/Menu/ExpandableMenuItem.razor.css
+++ b/src/templates.simple/axosimple.app/Shared/Menu/ExpandableMenuItem.razor.css
@@ -15,10 +15,9 @@
     }
 
     .nav-item ::deep a {
-        color: #000000;
         display: flex;
         align-items: center;
-        border-radius: 20px;
+        border-radius: 0.96rem;
         margin: 0.5rem;
         line-height: 2rem;
         text-transform: uppercase;
@@ -27,16 +26,6 @@
         user-select: none;
         overflow: hidden;
     }
-
-        .nav-item ::deep a.active {
-            background-color: rgba(13, 110, 253, 1);
-            color: #000000;
-        }
-
-        .nav-item ::deep a:hover {
-            background-color: rgba(13, 110, 253, 0.6);
-            color: #000000;
-        }
 
 .oi-chevron-top {
     transform: rotate(0deg);
