--- a/src/templates.simple/axosimple.app/Shared/IAmHereIndicator.razor
+++ b/src/templates.simple/axosimple.app/Shared/IAmHereIndicator.razor
@@ -1,16 +1,16 @@
 ﻿@implements IDisposable
-<div class="ms-1">
-    <nav aria-label="breadcrumb" class="ms-3">
-        <ol class="breadcrumb">
+<div class="ms-4">
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb mb-0">
             @foreach (var link in uri)
             {
                 if (link != uri.Last())
                 {
-                    <li class="breadcrumb-item h5"><a href="@string.Join("/", uri.Take(Array.IndexOf(uri, link) + 1))">@link</a></li>
+                    <li class="breadcrumb-item h5 mb-0"><a href="@string.Join("/", uri.Take(Array.IndexOf(uri, link) + 1))">@link</a></li>
                 }
                 else
                 {
-                    <li class="breadcrumb-item active h5" aria-current="page">@link</li>
+                    <li class="breadcrumb-item active h5 mb-0" aria-current="page">@link</li>
                 }
             }
         </ol>
