--- a/src/templates.simple/axosimple.app/Shared/NavMenu.razor.css
+++ b/src/templates.simple/axosimple.app/Shared/NavMenu.razor.css
@@ -1,5 +1,11 @@
 .nav-menu {
-    border-left: 1px solid rgba(13, 110, 253, 1);
+    position: fixed;
+    width: 100%;
+    max-height: 100vh;
+    overflow: auto;
+    padding-bottom: 1px; /* Prevent scrollbar from overlapping content */
+    top: 0;
+    left: 0;
 }
 
 .navbar-toggler {
@@ -12,13 +18,14 @@
         height: 100vh;
         position: sticky;
         top: 0;
+        border-left: 1px solid rgba(13, 110, 253, 1);
     }
 
     .navbar-toggler {
         display: none;
     }
 
-    .collapse {
+    .nav-menu .collapse:not(.show) {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
